SERVER-51763: Rewrite misleading error message for missing config file